@@ -194,11 +194,15 @@ namespace <%=$cur_coll.target%> {
 %>
 		public MethodDefinition GetConstructor (bool isStatic, Type [] parameters)
 		{
-			foreach (MethodDefinition ctor in this)
-				if (ctor.IsStatic == isStatic && ctor.Parameters.Count == parameters.Length)
+			foreach (MethodDefinition ctor in this) {
+				if (ctor.IsStatic == isStatic && ctor.Parameters.Count == parameters.Length) {
+					if (parameters.Length == 0)
+						return ctor;
 					for (int i = 0; i < parameters.Length; i++)
 						if (ctor.Parameters [i].ParameterType.FullName ==  ReflectionHelper.GetTypeSignature (parameters [i]))
 							return ctor;
+				}
+			}
 
 			return null;
 		}
