@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Thu Sep 29 23:20:03 CEST 2005
+// Tue Jan 24 20:04:58 CET 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -129,11 +129,15 @@ namespace Mono.Cecil {
 
 		public MethodDefinition GetConstructor (bool isStatic, Type [] parameters)
 		{
-			foreach (MethodDefinition ctor in this)
-				if (ctor.IsStatic == isStatic && ctor.Parameters.Count == parameters.Length)
+			foreach (MethodDefinition ctor in this) {
+				if (ctor.IsStatic == isStatic && ctor.Parameters.Count == parameters.Length) {
+					if (parameters.Length == 0)
+						return ctor;
 					for (int i = 0; i < parameters.Length; i++)
 						if (ctor.Parameters [i].ParameterType.FullName ==  ReflectionHelper.GetTypeSignature (parameters [i]))
 							return ctor;
+				}
+			}
 
 			return null;
 		}
